--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@ debug/
 
 yarn.lock
 contracts/deployments/
+
+
+# Compiler files
+cache/
+out/
+
+# Ignores development broadcast logs
+broadcast/*
+
+# Docs
+docs/
+
+# Dotenv file
+.env
+
+
+# DS_store files
+.DS_Store
+lib/.DS_Store
