--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,6 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [{ access = "read-write", path = "./" }]
 solc = "0.8.26"
 via-ir = true
 
