--- a/operator/package.json
+++ b/operator/package.json
@@ -1,12 +1,17 @@
 {
-	"dependencies": {
-		"@types/node": "^22.8.2",
-		"dotenv": "^16.4.5",
-		"ethers": "^6.13.4",
-		"viem": "^2.21.36",
-		"wagmi": "^2.12.25"
-	},
-	"devDependencies": {
-		"@wagmi/cli": "^2.1.16"
-	}
+  "dependencies": {
+    "@reclaimprotocol/circom-symmetric-crypto": "^1.1.3",
+    "@reclaimprotocol/js-sdk": "^2.1.1",
+    "@reclaimprotocol/zk-fetch": "^0.2.0",
+    "@types/node": "^22.8.4",
+    "chalk": "^4.1.2",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
+    "figlet": "^1.8.0",
+    "loglevel": "^1.9.2",
+    "ora": "^5.4.1"
+  },
+  "devDependencies": {
+    "@types/figlet": "^1.7.0"
+  }
 }
