feat: add RECLAIM_APP_ID and RECLAIM_SECRET to .env.example
Add the RECLAIM_APP_ID and RECLAIM_SECRET variables to the .env.example file in the operator directory.
This allows users to easily configure their Reclaim app ID and secret for the operator.

--- a/operator/.env.example
+++ b/operator/.env.example
@@ -1,4 +1,5 @@
 PRIVATE_KEY=your-private-key
 RPC_URL=your-rpc-url.com
 USER_PRIVATE_KEY=user-private-key-for-testing
-
+RECLAIM_APP_ID=your-reclaim-app-id
+RECLAIM_SECRET=your-reclaim-secret
